--- a/frontend/src/components/AttendanceToday/Attendance.css
+++ b/frontend/src/components/AttendanceToday/Attendance.css
@@ -31,7 +31,7 @@
   }
   
   /* Estilo para los componentes individuales */
-  .attendance-today, .no-entry-list, .exit-no-entry-list {
+  .attendance-today, .no-entry-list, .exit-no-entry-list, .section-a {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
